@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016 Nicira, Inc.
+ * Copyright (c) 2008-2016, 2019 Nicira, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -220,9 +220,19 @@ want_to_poll_events(int want)
     }
 }
 
-/* Takes ownership of 'name'. */
+/* Creates a new SSL connection based on socket 'fd', as either a client or a
+ * server according to 'type', initially in 'state'.  On success, returns 0 and
+ * stores the new stream in '*streamp', otherwise returns an errno value and
+ * doesn't bother with '*streamp'.
+ *
+ * Takes ownership of 'name', which should be the name of the connection in the
+ * format that would be used to connect to it, e.g. "ssl:1.2.3.4:5".
+ *
+ * For client connections, 'server_name' should be the host name of the server
+ * being connected to, for use with SSL SNI (server name indication).  Takes
+ * ownership of 'server_name'. */
 static int
-new_ssl_stream(char *name, int fd, enum session_type type,
+new_ssl_stream(char *name, char *server_name, int fd, enum session_type type,
                enum ssl_state state, struct stream **streamp)
 {
     struct ssl_stream *sslv;
@@ -274,6 +284,14 @@ new_ssl_stream(char *name, int fd, enum session_type type,
     if (!verify_peer_cert || (bootstrap_ca_cert && type == CLIENT)) {
         SSL_set_verify(ssl, SSL_VERIFY_NONE, NULL);
     }
+#if OPENSSL_SUPPORTS_SNI
+    if (server_name && !SSL_set_tlsext_host_name(ssl, server_name)) {
+        VLOG_ERR("%s: failed to set server name indication (%s)",
+                 server_name, ERR_error_string(ERR_get_error(), NULL));
+        retval = ENOPROTOOPT;
+        goto error;
+    }
+#endif
 
     /* Create and return the ssl_stream. */
     sslv = xmalloc(sizeof *sslv);
@@ -293,6 +311,7 @@ new_ssl_stream(char *name, int fd, enum session_type type,
     }
 
     *streamp = &sslv->stream;
+    free(server_name);
     return 0;
 
 error:
@@ -301,6 +320,7 @@ error:
     }
     closesocket(fd);
     free(name);
+    free(server_name);
     return retval;
 }
 
@@ -309,6 +329,30 @@ ssl_stream_cast(struct stream *stream)
 {
     stream_assert_class(stream, &ssl_stream_class);
     return CONTAINER_OF(stream, struct ssl_stream, stream);
+}
+
+/* Extracts and returns the server name from 'suffix'.  The caller must
+ * eventually free it.
+ *
+ * Returns NULL if there is no server name, and particularly if it is an IP
+ * address rather than a host name, since RFC 3546 is explicit that IP
+ * addresses are unsuitable as server name indication (SNI). */
+static char *
+get_server_name(const char *suffix_)
+{
+    char *suffix = xstrdup(suffix_);
+
+    char *host, *port;
+    inet_parse_host_port_tokens(suffix, &host, &port);
+
+    ovs_be32 ipv4;
+    struct in6_addr ipv6;
+    char *server_name = (ip_parse(host, &ipv4) || ipv6_parse(host, &ipv6)
+                         ? NULL : xstrdup(host));
+
+    free(suffix);
+
+    return server_name;
 }
 
 static int
@@ -325,7 +369,8 @@ ssl_open(const char *name, char *suffix, struct stream **streamp, uint8_t dscp)
                              dscp);
     if (fd >= 0) {
         int state = error ? STATE_TCP_CONNECTING : STATE_SSL_CONNECTING;
-        return new_ssl_stream(xstrdup(name), fd, CLIENT, state, streamp);
+        return new_ssl_stream(xstrdup(name), get_server_name(suffix),
+                              fd, CLIENT, state, streamp);
     } else {
         VLOG_ERR("%s: connect: %s", name, ovs_strerror(error));
         return error;
@@ -514,6 +559,14 @@ ssl_connect(struct stream *stream)
             VLOG_INFO("rejecting SSL connection during bootstrap race window");
             return EPROTO;
         } else {
+#if OPENSSL_SUPPORTS_SNI
+            const char *servername = SSL_get_servername(
+                sslv->ssl, TLSEXT_NAMETYPE_host_name);
+            if (servername) {
+                VLOG_DBG("connection indicated server name %s", servername);
+            }
+#endif
+
             char *cn = get_peer_common_name(sslv);
 
             if (cn) {
@@ -899,7 +952,7 @@ pssl_accept(struct pstream *pstream, struct stream **new_streamp)
     ds_put_cstr(&name, "ssl:");
     ss_format_address(&ss, &name);
     ds_put_format(&name, ":%"PRIu16, ss_get_port(&ss));
-    return new_ssl_stream(ds_steal_cstr(&name), new_fd, SERVER,
+    return new_ssl_stream(ds_steal_cstr(&name), NULL, new_fd, SERVER,
                           STATE_SSL_CONNECTING, new_streamp);
 }
 
