@@ -1422,3 +1422,23 @@ AT_CHECK([ovs-vsctl -t 5 --no-wait --db=ssl:127.0.0.1:$SSL_PORT --private-key=$P
 
 OVS_VSCTL_CLEANUP
 AT_CLEANUP
+
+AT_SETUP([TLS server name indication (SNI)])
+AT_KEYWORDS([ovsdb server positive ssl tls sni])
+AT_SKIP_IF([test "$HAVE_OPENSSL" = no])
+AT_SKIP_IF([test "$OPENSSL_SUPPORTS_SNI" = no])
+AT_SKIP_IF([test "$HAVE_UNBOUND" = no])
+OVSDB_INIT([conf.db])
+PKIDIR=$abs_top_builddir/tests
+AT_CHECK([ovsdb-server --log-file --detach --no-chdir --pidfile --private-key=$PKIDIR/testpki-privkey2.pem --certificate=$PKIDIR/testpki-cert2.pem --ca-cert=$PKIDIR/testpki-cacert.pem --remote=pssl:0:127.0.0.1 -vPATTERN:file:%m -vstream_ssl conf.db], [0], [ignore], [ignore])
+PARSE_LISTENING_PORT([ovsdb-server.log], [SSL_PORT])
+
+AT_CHECK([ovs-vsctl -t 5 --no-wait --db=ssl:localhost:$SSL_PORT --private-key=$PKIDIR/testpki-privkey.pem --certificate=$PKIDIR/testpki-cert.pem --bootstrap-ca-cert=$PKIDIR/testpki-cacert.pem add-br br0])
+
+AT_CAPTURE_FILE([ovsdb-server.log])
+AT_CHECK([grep "server name" ovsdb-server.log], [0],
+         [connection indicated server name localhost
+])
+
+OVS_VSCTL_CLEANUP
+AT_CLEANUP
