@@ -31,6 +31,8 @@ Post-v2.11.0
      * Added the HA chassis group support.
      * Added 'external' logical port support.
    - New QoS type "linux-netem" on Linux.
+   - Added support for TLS Server Name Indication (SNI).
+
 
 v2.11.0 - 19 Feb 2019
 ---------------------
